runtime/samples/SalesforceFoundation/Relationships/src/objects/Relationship_Error__c.object
<CustomObject>
    <description>Errors can now be found in the Errors Log tab in the NPSP Settings page.</description>
    <fields>
        <fullName>Error_Date_Time__c</fullName>
        <description>Date &amp; time the error occurred</description>
        <inlineHelpText>Date &amp; time the error occurred</inlineHelpText>
        <label>Error Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Record_Link__c</fullName>
        <description>A link to the record which caused the error, if available.</description>
        <inlineHelpText>A link to the record which caused the error, if available.</inlineHelpText>
        <label>Error Record Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Error_Stack_Trace__c</fullName>
        <description>Stack trace for the thrown error, if available at run time.</description>
        <inlineHelpText>Stack trace for the thrown error, if available at run time.</inlineHelpText>
        <label>Error Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <description>Type of error that occurred</description>
        <inlineHelpText>Type of error that occurred</inlineHelpText>
        <label>Error Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Error_Message__c</fullName>
        <description>Full text of the error message</description>
        <inlineHelpText>Full text of the error message</inlineHelpText>
        <label>Full Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DEPRECATED-Relationship Error</label>
    <nameField>
        <displayFormat>E-{MMDDYY}-{00000000}</displayFormat>
        <label>Relationship Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>